almost final introduction. i also polished the abstract

--- a/PSHA.bib
+++ b/PSHA.bib
@@ -422,6 +422,18 @@
   Timestamp                = {2015.07.15}
 }
 
+@Article{Chafory-Ashtiany_1999_DPM,
+  Title                    = {Rescue operation and reconstruction of recent earthquakes in {I}ran},
+  Author                   = {Ghafory-Ashtiany, M.},
+  Journal                  = {Disaster Prevention and Management: An International Journal},
+  Year                     = {1999},
+  Number                   = {1},
+  Pages                    = {5--20},
+  Volume                   = {8},
+
+  Doi                      = {10.1108/09653569910258174}
+}
+
 @InProceedings{Ghodrati2008,
   Title                    = {Seismic Hazard Assessment of {G}ilan Province Including {M}anjil in {I}ran},
   Author                   = {Ghodrati Amiri, G and Amrei, SA Razavian},
@@ -698,6 +710,16 @@
   Timestamp                = {2015.07.15}
 }
 
+@InProceedings{Mahdi_2004_WCEE,
+  Title                    = {Performance of Traditional Arches and Domes in Recent {I}ranian Earthquakes},
+  Author                   = {Mahdi, T.},
+  Booktitle                = {Proc.~World Conf.~Earthq.~Eng.},
+  Year                     = {2004},
+
+  Address                  = {Vancouver, B.C., Canada, August 1--6},
+  Number                   = {Paper No.~2871}
+}
+
 @Article{Masson2006,
   Title                    = {Extension in {NW} {I}ran driven by the motion of the {S}outh {C}aspian Basin},
   Author                   = {Masson, F and Djamour, Y and Van Gorp, S and Ch{\'e}ry, J and Tatar, M and Tavakoli, F and Nankali, H and Vernant, P},
@@ -710,6 +732,17 @@
   Owner                    = {naeem},
   Publisher                = {Elsevier},
   Timestamp                = {2015.07.15}
+}
+
+@TechReport{Mehrain_1990_Tech,
+  Title                    = {Reconnaissance Report on the Northern {I}ran Earthquake of {J}une 21, 1990},
+  Author                   = {Mehrain, M.},
+  Institution              = {National Center for Earthquake Engineering Research (NCEER)},
+  Year                     = {1990},
+  Month                    = {October},
+  Number                   = {NCEER-90-0017},
+
+  Url                      = {http://hdl.handle.net/10477/651}
 }
 
 @Article{Mirzaei1997,
@@ -739,8 +772,29 @@
   Timestamp                = {2015.07.15}
 }
 
+@InCollection{Moinfar_2000_Chap,
+  Title                    = {A New Seismic Hazard Map for the Implementation in the National Physical Planning of {I}ran},
+  Author                   = {Moinfar, A. A. and Naderzadeh, A. and Maleki, E.},
+  Booktitle                = {Earthquake Hazard and Seismic Risk Reduction},
+  Publisher                = {Springer Netherlands},
+  Year                     = {2000},
+  Editor                   = {Balassanian, Serguei and Cisternas, Armando and Melkumyan, Mikael},
+  Pages                    = {289-296},
+  Volume                   = {12},
+
+  Doi                      = {10.1007/978-94-015-9544-5\_28}
+}
+
+@InProceedings{Moinfar_2012_WCEE,
+  Title                    = {New {I}ranian Seismic Hazard Zoning Map for New Edition Edition of Seismic Code and Its Comparison with Neighbor Countries},
+  Author                   = {Moinfar, A. A. and Naderzadeh, A. and Nabavi, M. H.},
+  Booktitle                = {Proc.~World Conf.~Earthq.~Eng.},
+  Year                     = {2012},
+  Number                   = {1480}
+}
+
 @Article{Moinfar1994,
-  Title                    = {Historical and instrumental earthquake data collection of Iran},
+  Title                    = {Historical and instrumental earthquake data collection of {I}ran},
   Author                   = {Moinfar, A and Mahdavian, A and Maleki, E},
   Journal                  = {Mahab Ghods Consultant Engineers, Iran (in Persian)},
   Year                     = {1994},
@@ -815,6 +869,13 @@
 
   Owner                    = {naeem},
   Timestamp                = {2015.07.18}
+}
+
+@TechReport{Razzaghi_2012_Tech,
+  Title                    = {A Preliminary Reconnaissance Report on {A}ugust 11th 2012, {V}arzaghan-{A}har Twin Earthquakes in {NW} of {I}ran},
+  Author                   = {Razzaghi, Mehran S. and Ghafory-Ash\-tia\-ny, M.},
+  Institution              = {International Association of Seismology and Physics of the Earth's Interior, and Iranian Earthquake Engineering Association},
+  Year                     = {2012}
 }
 
 @Article{Reasenberg1985,
