--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,12 @@
 % 
-This article presents a seismic hazard assessment for northern Iran where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical region including the three major seismic zones affecting the northern part of the country, namely Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the two remaining seismic zones to the south, that is, Zagros to the southwest, and the south-central and southeastern Iranian seismic zones. Following the concepts of smoothed seismicity, events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both the latitude and longitude directions. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Smoothing was done using a Gaussian filter in incremental intervals of magnitude. Seismicity parameters are calculated and smoothed for each seismic zone separately, and for comparison purposes, we also consider the combination of all the seismic zones as a single seismotectonic region. Seismic hazard curves obtained for two distinct models defined according to two structural risk scenarios. These scenarios are based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 for unreinforced and informal construction, and greater than 5.0 for modern structures following design regulations. We also present results for a combined scenario based on the proportion of reinforced and unreinforced structures. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the difference observed due to the intrinsic differences in the methods employed here in light of results obtained by other previous studies. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain a more robust estimates at specific areas of interest.
-
+This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the seismic zones of Zagros to the southwest, and the south-central and southeastern Iranian seismic zones. In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are calculated for each seismic zone separately, and for comparison purposes we also consider the combination of all zones into a single seismotectonic region. Seismic hazard curves are obtained for two distinct models defined based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0 for unreinforced and reinforced structures, respectively. We also obtain results for a combined scenario of these two models. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
 
+% Smoothing was done using a Gaussian filter in incremental intervals of magnitude. 
+
+% greater than 4.5 for unreinforced and informal construction buildings, and greater than 5.0 for modern structures following design regulations
 
 % Naeem's comment about differences with previous studies...
 
