--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,11 @@
 % 
-This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh. For completeness, we also consider the partial contribution of the seismic zones of Zagros to the southwest, and the south-central and southeastern Iranian seismic zones. In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are calculated for each seismic zone separately, and for comparison purposes we also consider the combination of all zones into a single seismotectonic region. Seismic hazard curves are obtained for two distinct models defined based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0 for unreinforced and reinforced structures, respectively. We also obtain results for a combined scenario of these two models. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
+This article presents a seismic hazard assessment for northern Iran, where a smoothed seismicity approach has been used in combination with an updated seismic catalog and a ground motion prediction equation recently found to yield the best fit with data. We evaluate the hazard over a geographical area including the seismic zones of Azerbaijan, the Alborz Mountain Range, and Kopeh-Dagh; and for completeness, we also consider the contribution of parts of other neighboring seismic zones that fall within our region of interest.
+% For completeness, we also consider the partial contribution of the seismic zones of Zagros to the southwest, and the south-central and southeastern Iranian seismic zones. 
+In the chosen approach, seismic events are not assigned to specific faults but are instead assumed to be potential seismogenic sources by in themselves, and are spatially distributed within regular grid cells of size equal to 0.1\textdegree{} in both latitude and longitude. After performing the corresponding magnitude conversions, we decluster both historical and instrumental seismicity catalogs to obtain earthquake rates based on the number of events within each cell, and smooth the results to account for the uncertainty in the spatial distribution of future earthquakes. Seismicity parameters are calculated for each seismic zone separately, and for comparison purposes we also consider the combination of all zones into a single seismotectonic region. Seismic hazard curves are obtained for two 
+% distinct 
+models defined based on the assumption that damage occurs above earthquake magnitude thresholds of $M_w$ greater than 4.5 and 5.0, depending on the type of construction, 
+ % for unreinforced and reinforced structures, respectively. We 
+and also obtain results for a combined scenario using these two models. The results are presented in terms of expected peak ground acceleration curves and hazard maps, considering exceedance probabilities of 2 and 10 percent in 50 years for rock site conditions. We compare our results to equivalent estimations available in the literature at selected locations and offer our perspective on the differences observed. In conclusion, we find our results to be helpful in understanding seismic hazard for northern Iran from a regional perspective, but highlight the fact that different methods may need to be combined to obtain more robust estimates at specific areas of interest.
 
 % *********************************************************************************************************************
 % *********************************************************************************************************************
