starting with roi

--- a/region_of_interest.tex
+++ b/region_of_interest.tex
@@ -1,6 +1,19 @@
 
 \section{Region of Interest}
 
+We defined our region of interest between longitudes 43.5\textdegree{}E and 62\textdegree{}E, and latitudes 34\textdegree{}N and 40\textdegree{}N, as shown in Figure \ref{fig:Iran}.
+
+
+
+This geographical area, shown in Figure \ref{fig:Iran}, encloses the northern part of Iran and the tectonic seismic zones of Azerbaijan, Alborz, and Kopeh-Dagh. It also encloses the northern portions of the Zagros and Central-East seismic zones. 
+
+
+
+% According to this tectonic setting and the geologic provinces of the plateau, Iranian earthquakes have been categorized into various seismic zones, ranging from the definition of four to nine major seismic zones in the more traditional studies \citep[e.g.,][]{Stocklin1968, Takin1972, Berberian1976}, and up to twenty to twenty-three seismotectonic provinces in the more elaborate ones \citep[e.g.,][]{Nowroozi1976, Tavakoli1999}. Contemporary, well-accepted studies divide Iran into five major tectonic regions: Azerbaijan-Alborz, Kopeh-Dagh, Zagros, Central-East Iran, and Makran \citep[e.g.,][]{Mirzaei1998}. More recently, in a study aimed to develop a uniform earthquake catalog for Iran, \citet{Karimiparidari2013} further divided the Azerbaijan-Alborz region into two separate seismic zones: Azerbaijan and the Alborz Mountain Range, hereafter referred to simply as Alborz. We adopt the latter definition of six seismic basic seismic zones and focus our attention on those most relevant to the northern part of the country, that is, Azerbaijan, Alborz and Kopeh-Dagh.
+
+
+This categorization corresponds to 
+
 With respect to different seismicity rates of the regions \citep{Nemati2015}, as well as the completeness of the seismic catalog \citep{Zare2014} , the study region is divided into three tectonic seismic zones. Each of these zones is characterized by its respective seismicity parameters values, including b-value and maximum magnitude ($M{_{max}}$). Part of Central Iran and Zagros regions are inside of the study region. We also calculated the seismicity parameters in these regions. Fig.~\ref{fig:Iran} shows the study region and different seismotectonic classification.
 
 \begin{figure*}[!ht] 
